--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "discord-api-types": "^0.37.50",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "mongoose": "^7.4.1",
