--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "randombot-website",
   "version": "0.1.0",
   "private": true,
+  "randombotV": "0.5.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
